<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">袂卓OA</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hint_username">用户名</string>
    <string name="hint_nickname">昵称</string>
    <string name="hint_password">密码</string>
    <string name="hint_password_comfirm">重复密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>

</resources>